load("//examples/embedded:transition.bzl", "transition_binary")
load("//swift:swift.bzl", "swift_binary", "swift_library")

platform(
    name = "static-linux-x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "//swift/toolchains:static_linux",
    ],
)

swift_library(
    name = "Greeter",
    srcs = ["Sources/Greeter/Greeter.swift"],
    module_name = "Greeter",
)

# This only builds for the Static Linux SDK platform configured by the
# transition below, so the //examples/... wildcard skips it on a host platform.
swift_binary(
    name = "HelloStaticLinux",
    srcs = ["Sources/HelloStaticLinux/main.swift"],
    target_compatible_with = ["//swift/toolchains:static_linux"],
    deps = [":Greeter"],
)

transition_binary(
    name = "hello_static_linux",
    binary = ":HelloStaticLinux",
    platform = ":static-linux-x86_64",
)
