swift = use_extension("//swift:extensions.bzl", "swift", dev_dependency = True)
swift.wasm_sdk(toolchain_name = "swift_toolchain")

register_toolchains(
    # We register only the host platforms used by CI rather than
    # `@swift_toolchain//:all`; see the note in the root MODULE.bazel.
    "@swift_toolchain//:cc_toolchain_wasm32_ubuntu22.04",
    "@swift_toolchain//:cc_toolchain_wasm32_ubuntu22.04-aarch64",
    "@swift_toolchain//:cc_toolchain_wasm32_xcode",
    "@swift_toolchain//:swift_toolchain_wasm32_ubuntu22.04",
    "@swift_toolchain//:swift_toolchain_wasm32_ubuntu22.04-aarch64",
    "@swift_toolchain//:swift_toolchain_wasm32_xcode",
    dev_dependency = True,
)
