load(
    "//examples/xplatform/custom_swift_library:custom_swift_library.bzl",
    "custom_swift_library",
)
load("//swift:swift_binary.bzl", "swift_binary")
load("//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "regular",
    srcs = [
        "Regular.swift",
    ],
    module_name = "Regular",
)

custom_swift_library(
    name = "custom",
    custom_type_name = "Custom",
    module_name = "Custom",
    regular_import = "import Regular",
    regular_type_name = "Regular",
    deps = [
        ":regular",
    ],
)

swift_binary(
    name = "binary",
    srcs = ["main.swift"],
    deps = [
        ":custom",
        ":regular",
    ],
)
