load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

licenses(["notice"])

sh_binary(
    name = "custom_proto_compiler",
    srcs = ["custom_proto_compiler.sh"],
    visibility = ["//examples/xplatform/custom_swift_proto_compiler/rules:__subpackages__"],
)

bzl_library(
    name = "swift_proto_compiler",
    visibility = ["//examples/xplatform/custom_swift_proto_compiler:__subpackages__"],
    deps = [
        "//swift",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "custom_swift_proto_compiler",
    srcs = ["custom_swift_proto_compiler.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swift",
        "@bazel_skylib//lib:paths",
    ],
)
