load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto:swift_proto_library.bzl", "new_swift_proto_library")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    deps = ["//examples/xplatform/new_grpc/service/service_messages:service_messages_proto"],
)

new_swift_proto_library(
    name = "service_server_swift_proto",
    module_name = "ServiceServer",
    protos = [":service_proto"],
    deps = ["//examples/xplatform/new_grpc/service/service_messages:service_messages_swift_proto"],
    compilers = ["//proto:swift_server_grpc"],
    visibility = ["//visibility:public"],
)

new_swift_proto_library(
    name = "service_client_swift_proto",
    module_name = "ServiceClient",
    protos = [":service_proto"],
    deps = ["//examples/xplatform/new_grpc/service/service_messages:service_messages_swift_proto"],
    compilers = ["//proto:swift_client_grpc"],
    visibility = ["//visibility:public"],
)

new_swift_proto_library(
    name = "service_test_client_swift_proto",
    module_name = "ServiceTestClient",
    protos = [":service_proto"],
    deps = [
        "//examples/xplatform/new_grpc/service/service_messages:service_messages_swift_proto",
    ],
    additional_plugin_options = {
        "ExtraModuleImports": "ServiceClient",
    },
    compiler_deps = [
        "//examples/xplatform/new_grpc/service:service_client_swift_proto",
    ],
    compilers = ["//proto:swift_test_client_grpc"],
    visibility = ["//visibility:public"],
)
