load("//proto:swift_proto_library.bzl", "new_swift_proto_library")

proto_library(
    name = "messages_proto",
    srcs = ["messages.proto"],
    visibility = ["//visibility:public"],
)

new_swift_proto_library(
    name = "messages_swift_proto",
    module_name = "Messages",
    protos = [":messages_proto"],
    visibility = ["//visibility:public"],
)